--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=south" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,700;1,9..40,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -33,63 +34,84 @@
             </div>
             </div>
         </nav>
+        <hr>
     </header>
         <main class="my-5">
             <div class="container">
                 <div class="row">
                     <div class="col-md-7">
-                        <h1>Здравствуйте!</h1>
+                        <h1 class="dm-sans-bold-heading">Здравствуйте!</h1>
                         <p class="mt-4">Перед вами современный тренажер, с помощью которого вы можете проходить билеты в виде тестов.</p>
                         <p class="mt-4">Нажмите на кнопку или давигайтесь вниз, что бы начать. Также вы можете сначала почитать подробности об экзамене!</p>
-                        <button type="button" class="btn btn-primary btn-lg">Начнем!</button>
+                        <button class="button" onclick="scrollToTestModes()">
+                          <span class="material-symbols-outlined">south</span>
+                          Начнем!
+                        </button>
+                        <button class="button button-details">
+                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" color="#000000" fill="none">
+                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
+                            <path d="M10 9C10 7.89543 10.8954 7 12 7C13.1046 7 14 7.89543 14 9C14 9.39815 13.8837 9.76913 13.6831 10.0808C13.0854 11.0097 12 11.8954 12 13V13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                            <path d="M11.992 17H12.001" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Подробности о экзамене
+                        </button>
                     </div>
                     <div class="col-md-5">
                         <img 
                         src="./img/main_boy.jpg"
-                        alt="Photo"
+                        alt="Boy"
                         class="img-fluid"
                         />
                     </div>
                 </div>
-                <div class="row justify-content-center  text-center mt-5">
+                <div class="row justify-content-center  text-center mt-5" id="test-modes">
                     <div class="col-md-6">
-                        <h1>Выберите режим теста</h1>
+                      <h1 class="dm-sans-bold-heading">Выберите режим теста</h1>
                         <p class="mt-4  text-center">Режимы отличаются количеством вопросов и критериями, по которым они распределены</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 mb-4">
+                  <div class="col-md-4 mb-4">
+                    <a href="themes.html" class="card-link">
                       <div class="card">
-                        <img src="./img/themes.jpg" class="card-img-top" alt="...">
+                        <img src="./img/themes.jpg" class="card-img-top" alt="Темы">
                         <div class="card-body">
                           <h1 class="card-title">Темы</h1>
                           <p class="card-text">
-                            Выберите определенную тему из правил ПДД, на которую вы хотите прорешать вопросы.</p>
+                            Выберите определенную тему из правил ПДД, на которую вы хотите прорешать вопросы.
+                          </p>
                         </div>
                       </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
+                    </a>
+                  </div>
+                  <div class="col-md-4 mb-4">
+                    <a href="exam.html" class="card-link">
                       <div class="card">
-                        <img src="./img/exam.jpg" class="card-img-top" alt="...">
+                        <img src="./img/exam.jpg" class="card-img-top" alt="Экзамен">
                         <div class="card-body">
                           <h1 class="card-title">Экзамен</h1>
                           <p class="card-text">Попробуйте решить экзамен как в ГИБДД!
                             Представлены 20 вопросов из всех 40 билетов
-                            Только один шанс на ошибку...</p>
+                            Только один шанс на ошибку...
+                          </p>
                         </div>
                       </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
+                    </a>
+                  </div>
+                  <div class="col-md-4 mb-4">
+                    <a href="hard.html" class="card-link">
                       <div class="card">
-                        <img src="./img/Hard _ img.png" class="card-img-top" alt="...">
+                        <img src="./img/Hard _ img.png" class="card-img-top" alt="Сложные вопросы">
                         <div class="card-body">
                           <h1 class="card-title">Сложные вопросы</h1>
                           <p class="card-text">Здесь собран билет из 20 самых сложных вопросов,
-                            в которых ошибаются больше всего учеников</p>
+                            в которых ошибаются больше всего учеников
+                          </p>
                         </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
+                </div>
                 </div>
             </div>
         </main>
@@ -103,6 +125,7 @@
               </ul>
             </footer>
           </div>
+    <script src="./index.js"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
