--- a/topics/Pedestrian crossings.html
+++ b/topics/Pedestrian crossings.html
@@ -42,6 +42,15 @@
                 <div class="col-md-12">
                     <h1 class="dm-sans-bold-heading">Вы решаете билеты по темам</h1>
                     <p class="mt-4">Сейчас решается билет на тему: "Пешеходные переходы и места остановок маршрутных транспортных средств"</p>
+                    <div class="timer_n_ticket">
+                        <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M28 15.5C28 22.4035 22.4035 28 15.5 28C8.59644 28 3 22.4035 3 15.5C3 8.59644 8.59644 3 15.5 3" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M20.6667 15.5H15.5V7.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M24.3447 5.38679C24.5697 5.58544 24.7885 5.79125 25.0009 6.00368C25.2132 6.2161 25.4188 6.43513 25.6174 6.66022M19.375 2.58334C19.9977 2.76747 20.6083 3.00487 21.2006 3.28942M27.6901 9.758C27.9836 10.3632 28.228 10.9877 28.4167 11.625" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        <div id="timer"></div>
+                        <div id="ticket-display"></div> <!-- Контейнер для номеров билетов -->
+                    </div>
                         <div class="container-test">
                             <div id="quiz"></div>
                             <div id="result" class="result"></div>
