--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </a>
                   </div>
                   <div class="col-md-4 mb-4">
-                    <a href="exam.html" class="card-link">
+                    <a href="./exam.html" class="card-link">
                       <div class="card">
                         <img src="./img/exam.jpg" class="card-img-top" alt="Экзамен">
                         <div class="card-body">
