--- a/topics/residential_areas.html
+++ b/topics/residential_areas.html
@@ -73,6 +73,6 @@
             </footer>
           </div>
     <script src="../topics/js/residential_areas.js"></script>
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <script src="../bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
