--- a/hard.html
+++ b/hard.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,700;1,9..40,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style_test.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./css/style_test.css">
 </head>
 <body>
     <header>
@@ -40,8 +40,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="dm-sans-bold-heading">Вы решаете билеты по темам</h1>
-                    <p class="mt-4">Сейчас решается билет на тему: " Учебная езда и дополнительные требования к движению велосипедистов"</p>
+                    <h1 class="dm-sans-bold-heading">Вы решаете сложные вопросы</h1>
+                    <p class="mt-4">Среди всех вопросов есть те, в которых ошибается огромное количетсво учеников.
+                        Здесь собраны эти, сложные вопросы, что бы вы могли быть уверены, что ошибки вы в них не допустите</p>
                     <div class="timer_n_ticket">
                         <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M28 15.5C28 22.4035 22.4035 28 15.5 28C8.59644 28 3 22.4035 3 15.5C3 8.59644 8.59644 3 15.5 3" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -72,7 +73,7 @@
               </ul>
             </footer>
           </div>
-    <script src="../topics/js/training_riding.js"></script>
-    <script src="../bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <script src="./hard.js"></script>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
