--- a/topics/motorway.html
+++ b/topics/motorway.html
@@ -73,6 +73,6 @@
             </footer>
           </div>
     <script src="../topics/js/motorway.js"></script>
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <script src="../bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
