--- a/hard.html
+++ b/hard.html
@@ -15,20 +15,23 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-            <a class="navbar-brand mb-0 h1" href="../index.html">Автопилот</a>
+            <a class="navbar-brand mb-0 h1" href="./index.html">Автопилот</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">О нас</a>
+                    <a class="nav-link" href="./theory.html">Теория ПДД</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Теория ПДД</a>
+                    <a class="nav-link" href="./about_exam.html">О экзамене</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">О экзамене</a>
+                    <a class="nav-link" href="./about.html">О нас</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Решение</a>
                 </li>
                 </ul>
             </div>
@@ -63,17 +66,17 @@
             </div>
                 </div>
     </main>
-        <div class="container">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-              <p class="col-md-4 mb-0 text-muted">Автопилот</p>
-              <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">О нас</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Теория ПДД</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">О экзамене</a></li>
-              </ul>
-            </footer>
-          </div>
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <p class="col-md-4 mb-0 text-muted">Автопилот</p>
+          <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="./theory.html" class="nav-link px-2 text-muted">Теория ПДД</a></li>
+            <li class="nav-item"><a href="./about_exam.html" class="nav-link px-2 text-muted">О экзамене</a></li>
+            <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-muted">О нас</a></li>
+          </ul>
+        </footer>
+      </div>
     <script src="./hard.js"></script>
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <script src="./bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
