Done (definitely sure)

--- a/topics/Pedestrian crossings.html
+++ b/topics/Pedestrian crossings.html
@@ -52,7 +52,7 @@
                             <path d="M24.3447 5.38679C24.5697 5.58544 24.7885 5.79125 25.0009 6.00368C25.2132 6.2161 25.4188 6.43513 25.6174 6.66022M19.375 2.58334C19.9977 2.76747 20.6083 3.00487 21.2006 3.28942M27.6901 9.758C27.9836 10.3632 28.228 10.9877 28.4167 11.625" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         <div id="timer"></div>
-                        <div id="ticket-display"></div> <!-- Контейнер для номеров билетов -->
+                        <div id="ticket-display"></div>
                     </div>
                         <div class="container-test">
                             <div id="quiz"></div>
@@ -60,7 +60,7 @@
                             <button id="submit" class="button">Продолжить</button>
                             <button id="retry" class="button hide">Попробовать еще раз</button>
                             <button id="showAnswer" class="button hide">Показать ответы</button>
-                    </div>
+                        </div>
         </div>
             </div>
                 </div>
