--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <!-- Плашка для согласия на сбор данных -->
+    <div id="cookie-consent-banner" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: rgba(49, 49, 73, 0.8); color: rgb(0, 0, 0); text-align: center; padding: 10px; z-index: 1000;">
+        <p>Мы используем cookies для сбора данных. Продолжая использовать сайт, вы соглашаетесь с этим.</p>
+        <button id="cookie-consent-button" style="color: rgb(0, 0, 0); border: none; padding: 5px 10px; cursor: pointer;">Согласен</button>
+    </div>
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
@@ -36,96 +42,131 @@
         </nav>
         <hr>
     </header>
-        <main class="my-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7">
-                        <h1 class="dm-sans-bold-heading">Здравствуйте!</h1>
-                        <p class="mt-4">Перед вами современный тренажер, с помощью которого вы можете решать вопросы по теории правил дорожного движения.</p>
-                        <p class="mt-4">Нажмите на кнопку или давигайтесь вниз, что бы начать. Также вы можете сначала почитать подробности об экзамене!</p>
-                        <button class="button" onclick="scrollToTestModes()">
-                          <span class="material-symbols-outlined">south</span>
-                          Начнем!
-                        </button>
-                        <a href="./about_exam.html"><button class="button button-details">
-                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" color="#000000" fill="none">
-                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
-                            <path d="M10 9C10 7.89543 10.8954 7 12 7C13.1046 7 14 7.89543 14 9C14 9.39815 13.8837 9.76913 13.6831 10.0808C13.0854 11.0097 12 11.8954 12 13V13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                            <path d="M11.992 17H12.001" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                          </svg>
-                          Подробности о экзамене
-                        </button></a>
-                    </div>
-                    <div class="col-md-5">
-                        <img 
-                        src="./img/main_boy.jpg"
-                        alt="Boy"
-                        class="img-fluid"
-                        />
-                    </div>
+    <main class="my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <h1 class="dm-sans-bold-heading">Здравствуйте!</h1>
+                    <p class="mt-4">Перед вами современный тренажер, с помощью которого вы можете решать вопросы по теории правил дорожного движения.</p>
+                    <p class="mt-4">Нажмите на кнопку или давигайтесь вниз, что бы начать. Также вы можете сначала почитать подробности об экзамене!</p>
+                    <button class="button" onclick="scrollToTestModes()">
+                      <span class="material-symbols-outlined">south</span>
+                      Начнем!
+                    </button>
+                    <a href="./about_exam.html"><button class="button button-details">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" color="#000000" fill="none">
+                        <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
+                        <path d="M10 9C10 7.89543 10.8954 7 12 7C13.1046 7 14 7.89543 14 9C14 9.39815 13.8837 9.76913 13.6831 10.0808C13.0854 11.0097 12 11.8954 12 13V13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                        <path d="M11.992 17H12.001" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Подробности о экзамене
+                    </button></a>
                 </div>
-                <div class="row justify-content-center  text-center mt-5" id="test-modes">
-                    <div class="col-md-6">
-                      <h1 class="dm-sans-bold-heading">Выберите режим теста</h1>
-                        <p class="mt-4  text-center">Режимы отличаются количеством вопросов и критериями, по которым они распределены</p>
-                    </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-4 mb-4">
-                    <a href="./chose_topic.html" class="card-link">
-                      <div class="card">
-                        <img src="./img/themes.jpg" class="card-img-top" alt="Темы">
-                        <div class="card-body">
-                          <h1 class="card-title">Темы</h1>
-                          <p class="card-text">
-                            Выберите определенную тему из правил ПДД, на которую вы хотите прорешать вопросы.
-                          </p>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="col-md-4 mb-4">
-                    <a href="./exam.html" class="card-link">
-                      <div class="card">
-                        <img src="./img/exam.jpg" class="card-img-top" alt="Экзамен">
-                        <div class="card-body">
-                          <h1 class="card-title">Экзамен</h1>
-                          <p class="card-text">Попробуйте решить экзамен как в ГИБДД!
-                            Представлены 20 случайных вопросов из 76 билетов сайта
-                          </p>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="col-md-4 mb-4">
-                    <a href="hard.html" class="card-link">
-                      <div class="card">
-                        <img src="./img/Hard _ img.png" class="card-img-top" alt="Сложные вопросы">
-                        <div class="card-body">
-                          <h1 class="card-title">Сложные вопросы</h1>
-                          <p class="card-text">Здесь собран билет из 20 самых сложных вопросов,
-                            в которых ошибаются больше всего учеников
-                          </p>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
+                <div class="col-md-5">
+                    <img 
+                    src="./img/main_boy.jpg"
+                    alt="Boy"
+                    class="img-fluid"
+                    />
                 </div>
             </div>
-        </main>
-        <div class="container">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-              <p class="col-md-4 mb-0 text-muted">Автопилот</p>
-              <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="./theory.html" class="nav-link px-2 text-muted">Теория ПДД</a></li>
-                <li class="nav-item"><a href="./about_exam.html" class="nav-link px-2 text-muted">О экзамене</a></li>
-                <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-muted">О нас</a></li>
-              </ul>
-            </footer>
-          </div>
+            <div class="row justify-content-center  text-center mt-5" id="test-modes">
+                <div class="col-md-6">
+                  <button class="button" onclick="ym(100159850,'reachGoal','button')">Нажми на меня!</button>
+                  <h1 class="dm-sans-bold-heading">Выберите режим теста</h1>
+                    <p class="mt-4  text-center">Режимы отличаются количеством вопросов и критериями, по которым они распределены</p>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 mb-4">
+                <a href="./chose_topic.html" class="card-link">
+                  <div class="card">
+                    <img src="./img/themes.jpg" class="card-img-top" alt="Темы">
+                    <div class="card-body">
+                      <h1 class="card-title">Темы</h1>
+                      <p class="card-text">
+                        Выберите определенную тему из правил ПДД, на которую вы хотите прорешать вопросы.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                <a href="./exam.html" class="card-link" onclick="ym(100159850,'reachGoal','card-link')">
+                  <div class="card">
+                    <img src="./img/exam.jpg" class="card-img-top" alt="Экзамен">
+                    <div class="card-body">
+                      <h1 class="card-title">Экзамен</h1>
+                      <p class="card-text">Попробуйте решить экзамен как в ГИБДД!
+                        Представлены 20 случайных вопросов из 76 билетов сайта
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                <a href="hard.html" class="card-link">
+                  <div class="card">
+                    <img src="./img/Hard _ img.png" class="card-img-top" alt="Сложные вопросы">
+                    <div class="card-body">
+                      <h1 class="card-title">Сложные вопросы</h1>
+                      <p class="card-text">Здесь собран билет из 20 самых сложных вопросов,
+                        в которых ошибаются больше всего учеников
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            </div>
+        </div>
+    </main>
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <p class="col-md-4 mb-0 text-muted">Автопилот</p>
+          <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="mailto:shlimakovv@mail.ru" class="nav-link px-2 text-muted">Написать письмо</a></li>
+            <li class="nav-item"><a href="./theory.html" class="nav-link px-2 text-muted">Теория ПДД</a></li>
+            <li class="nav-item"><a href="./about_exam.html" class="nav-link px-2 text-muted">О экзамене</a></li>
+            <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-muted">О нас</a></li>
+          </ul>
+        </footer>
+      </div>
+
+    <!-- Код Яндекс.Метрики -->
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+       m[i].l=1*new Date();
+       for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+       k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+       ym(100159850, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+       });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/100159850" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
+    <!-- Скрипт для обработки согласия на использование cookies -->
+    <script>
+        document.getElementById('cookie-consent-button').addEventListener('click', function() {
+            document.getElementById('cookie-consent-banner').style.display = 'none';
+            // Сохраняем согласие пользователя в localStorage
+            localStorage.setItem('cookieConsent', 'true');
+        });
+
+        // Проверяем, дал ли пользователь согласие ранее
+        if (localStorage.getItem('cookieConsent') === 'true') {
+            document.getElementById('cookie-consent-banner').style.display = 'none';
+        }
+    </script>
+
     <script src="./index.js"></script>
     <script src="./bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
-
